--- a/applepie.html
+++ b/applepie.html
@@ -14,44 +14,63 @@
   <body>
     <main role="main">
       <div>
-        <div>
-          <div>
-            <h1>Apple pie</h1>
-            <p>Our famous, number-one selling pie.</p>
+        <!-- <h1 class="m-3">
+          Apple pie
+          <small>Our famous, number-one selling pie.</small>
+        </h1> -->
+        <div class="jumbotron">
+          <div class="container">
+            <h1 class="display-4">Apple pie</h1>
+
+            <p class="lead">Our famous, number-one selling pie.</p>
           </div>
         </div>
-        <!-- <h1>Apple pie
-                <small>Our famous, number-one selling pie.</small>
-            </h1> -->
-        <div>
+
+        <div class="alert alert-success">
           <strong>Success!</strong> Apple pie was added to your shopping cart.
         </div>
-        <div>
+
+        <div class="p-4">
           <div>
-            <img src="images/products/applepie.jpg" alt="Image of apple pie" />
+            <img
+              src="images/products/applepie.jpg"
+              alt="Image of apple pie"
+              class="rounded"
+            />
           </div>
 
           <div>
             <h3>About this pie</h3>
+
             <p>
               Sweet ice cream jelly beans lemon drops. Pastry toffee fruitcake
               gingerbread jelly-o. Lollipop sesame snaps muffin. Macaroon halvah
               marshmallow sesame snaps sugar plum dragée. Wafer pudding sesame
               snaps tootsie roll sesame snaps cake chupa chups jelly beans.
             </p>
+
             <h3>Ingredients</h3>
+
             <ul>
               <li>Apple</li>
               <li>Sugar</li>
               <li>Eggs</li>
               <li>Milk</li>
             </ul>
+
             <div>
               <div>
                 <strong>$14.95</strong>
               </div>
+
               <div>
-                <a type="button" href="shoppingbasket.html"> Add to basket </a>
+                <a
+                  type="button"
+                  href="shoppingbasket.html"
+                  class="btn btn-info"
+                >
+                  Add to basket
+                </a>
               </div>
             </div>
           </div>
