Update applepie page

--- a/applepie.html
+++ b/applepie.html
@@ -13,14 +13,18 @@
 <body>
 
     <main role="main">
-        <div>
-            <h1>Apple pie
-                <small>Our famous, number-one selling pie.</small>
+        <div class="m-3">
+            <h1 class="fw-bolder">Apple pie
+                <small class="fw-normal fst-italic">Our famous, number-one selling pie.</small>
             </h1> 
+
+            <div class="alert alert-success mt-3">
+                <strong>Success!</strong> Apple pie was added to your shopping cart.
+            </div>
             
-            <div >
+            <div class="p-4">
                 <div>
-                    <img src="images/products/applepie.jpg" alt="Image of apple pie">
+                    <img src="images/products/applepie.jpg" alt="Image of apple pie" class="rounded">
                 </div>
 
                 <div>
@@ -39,8 +43,9 @@
                         <div>
                             <strong>$14.95</strong>
                         </div>
-                        <div >
-                            <a type="button" href="shoppingbasket.html">
+                        <div class="m-1">
+                            <!-- TODO: To enable add href="shoppingbasket.html" and remove aria-disabled="true", tabindex="-1" and disabled class -->
+                            <a type="button" aria-disabled="true" tabindex="-1" class="btn btn-success disabled">
                                 Add to basket
                             </a>
                         </div>
