--- a/applepie.html
+++ b/applepie.html
@@ -1,61 +1,84 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Bethany's Pie Shop</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/custom.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+  </head>
 
-<body>
-
+  <body>
     <main role="main">
-        <div class="m-3">
-            <h1 class="fw-bolder">Apple pie
-                <small class="fw-normal fst-italic">Our famous, number-one selling pie.</small>
-            </h1> 
+      <div class="m-3">
+        <h1 class="fw-bolder">
+          Apple pie
+          <small class="fw-normal fst-italic"
+            >Our famous, number-one selling pie.</small
+          >
+        </h1>
 
-            <div class="alert alert-success mt-3">
-                <strong>Success!</strong> Apple pie was added to your shopping cart.
-            </div>
-            
-            <div class="p-4">
-                <div>
-                    <img src="images/products/applepie.jpg" alt="Image of apple pie" class="rounded">
-                </div>
+        <h2>test</h2>
 
-                <div>
-                    <h3>About this pie</h3>
-                    <p>Sweet ice cream jelly beans lemon drops. Pastry toffee fruitcake gingerbread jelly-o.
-                        Lollipop sesame snaps muffin. Macaroon halvah marshmallow sesame snaps sugar plum dragée.
-                        Wafer pudding sesame snaps tootsie roll sesame snaps cake chupa chups jelly beans.</p>
-                    <h3>Ingredients</h3>
-                    <ul>
-                        <li>Apple</li>
-                        <li>Sugar</li>
-                        <li>Eggs</li>
-                        <li>Milk</li>
-                    </ul>
-                    <div>
-                        <div>
-                            <strong>$14.95</strong>
-                        </div>
-                        <div class="m-1">
-                            <!-- TODO: To enable add href="shoppingbasket.html" and remove aria-disabled="true", tabindex="-1" and disabled class -->
-                            <a type="button" aria-disabled="true" tabindex="-1" class="btn btn-success disabled">
-                                Add to basket
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="alert alert-success mt-3">
+          <strong>Success!</strong> Apple pie was added to your shopping cart.
         </div>
+
+        <div class="p-4">
+          <div>
+            <img
+              src="images/products/applepie.jpg"
+              alt="Image of apple pie"
+              class="rounded"
+            />
+          </div>
+
+          <div>
+            <h3>About this pie</h3>
+            <p>
+              Sweet ice cream jelly beans lemon drops. Pastry toffee fruitcake
+              gingerbread jelly-o. Lollipop sesame snaps muffin. Macaroon halvah
+              marshmallow sesame snaps sugar plum dragée. Wafer pudding sesame
+              snaps tootsie roll sesame snaps cake chupa chups jelly beans.
+            </p>
+            <h3>Ingredients</h3>
+            <ul>
+              <li>Apple</li>
+              <li>Sugar</li>
+              <li>Eggs</li>
+              <li>Milk</li>
+            </ul>
+            <div>
+              <div>
+                <strong>$14.95</strong>
+              </div>
+              <div class="m-1">
+                <!-- TODO: To enable add href="shoppingbasket.html" and remove aria-disabled="true", tabindex="-1" and disabled class -->
+                <a
+                  type="button"
+                  aria-disabled="true"
+                  tabindex="-1"
+                  class="btn btn-success disabled"
+                >
+                  Add to basket
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
