--- a/applepie.html
+++ b/applepie.html
@@ -19,33 +19,24 @@
       <div class="m-3">
         <h1 class="fw-bolder">
           Apple pie
-          <small class="fw-normal fst-italic"
-            >Our famous, number-one selling pie.</small
-          >
+          <small class="fw-normal fst-italic">Our famous, number-one selling pie.</small>
         </h1>
 
         <h2>test</h2>
 
-        <div class="alert alert-success mt-3">
-          <strong>Success!</strong> Apple pie was added to your shopping cart.
-        </div>
+        <div class="alert alert-success mt-3"><strong>Success!</strong> Apple pie was added to your shopping cart.</div>
 
         <div class="p-4">
           <div>
-            <img
-              src="images/products/applepie.jpg"
-              alt="Image of apple pie"
-              class="rounded"
-            />
+            <img src="images/products/applepie.jpg" alt="Image of apple pie" class="rounded" />
           </div>
 
           <div>
             <h3>About this pie</h3>
             <p>
-              Sweet ice cream jelly beans lemon drops. Pastry toffee fruitcake
-              gingerbread jelly-o. Lollipop sesame snaps muffin. Macaroon halvah
-              marshmallow sesame snaps sugar plum dragée. Wafer pudding sesame
-              snaps tootsie roll sesame snaps cake chupa chups jelly beans.
+              Sweet ice cream jelly beans lemon drops. Pastry toffee fruitcake gingerbread jelly-o. Lollipop sesame
+              snaps muffin. Macaroon halvah marshmallow sesame snaps sugar plum dragée. Wafer pudding sesame snaps
+              tootsie roll sesame snaps cake chupa chups jelly beans.
             </p>
             <h3>Ingredients</h3>
             <ul>
@@ -60,14 +51,7 @@
               </div>
               <div class="m-1">
                 <!-- TODO: To enable add href="shoppingbasket.html" and remove aria-disabled="true", tabindex="-1" and disabled class -->
-                <a
-                  type="button"
-                  aria-disabled="true"
-                  tabindex="-1"
-                  class="btn btn-success disabled"
-                >
-                  Add to basket
-                </a>
+                <a type="button" aria-disabled="true" tabindex="-1" class="btn btn-success disabled"> Add to basket </a>
               </div>
             </div>
           </div>
